@@ -496,7 +496,6 @@ to set user preferences.",
 'protectedpagewarning' => "<!-- -->",
 'protectlogpage' => "Verndunarskrá",
 'protectpage' => "Vernda síðu",
-'protectreason' => "(gefðu ástæðu)",
 'protectsub' => "(Vernda „$1“)",
 'qbedit' => "Breyta",
 'qbsettings' => "Valblað",
