@@ -919,7 +919,6 @@ global $wgRightsText;
 	'confirmunprotecttext'		=>	'Дали навистина сакате да ја отстраните заштитата на оваа страница?',
 	'confirmunprotect'		=>	'Потврдете го отстранувањето на заштитата',
 	'unprotectcomment'		=>	'Причина за отстранување на заштитата',
-	'protectreason'			=>	'(кажете причина)',
 
 	'undelete'			=>	'Врати ја избришаната страница',
 	'undeletepage'			=>	'Погледај и врати ги избришаните страници',
