@@ -608,6 +608,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 2953) 'other' didn't work in Special:Blockip when localized
 * (bug 2958) Rollback and delete auto-summary should be in the project's
   content language
+* Removed useless protectreason message
 
 
 === Caveats ===
